<resources>
    <string name="app_name">IndeedChat</string>
    <string name="todo">TODO</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have account</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="signup_with_phone">SignUp with phone</string>
</resources>