<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG_Color"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/indeedchatlogo"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/edtSignUpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:padding="13dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="13dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edtSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="13dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/txtAlreadyHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/already_have_account"
            android:textColor="@color/Color_primaryDark" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="13dp"
            android:text="@string/sign_up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUpGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/googlelogo"
                android:padding="13dp"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="@color/black"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnSignUpFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fb_color"
                android:drawableLeft="@drawable/facebook_svgrepo_com"
                android:padding="13dp"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtSignUpWithPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="10dp"
            android:text="@string/signup_with_phone"
            android:textColor="@color/Color_primaryDark"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>